--- a/index.html
+++ b/index.html
@@ -162,8 +162,10 @@
         <h2>ขั้นตอนการใช้งาน:</h2>
         <ol>
             <li>
-                <strong>เปิดหน้าเว็บไซต์เป้าหมาย:</strong>
-                เปิดหน้าเว็บไซต์ที่คุณต้องการทดสอบหรือรัน JavaScript ในเบราว์เซอร์ของคุณ (เช่น Google Chrome, Firefox, Microsoft Edge)
+                <strong>ไปที่หน้าตารางวิชา:</strong>
+                เปิดหน้าเว็บไซต์แสดงตารางวิชาที่ต้องการรัน Script ในเบราว์เซอร์ของคุณ (เช่น Google Chrome, Firefox, Microsoft Edge)
+                <img src="target.png" alt="Browser Console Tab" style="max-width:100%; border:1px solid #ddd; margin-top:10px; border-radius: 4px;">
+                <br><small>(ภาพตัวอย่างหน้าเว็บแสดงตารางวิชา)</small>
             </li>
             <li>
                 <strong>เปิด Developer Tools:</strong>
