--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </li>
         </ol>
 
-        <h2>ข้อควรจำ:</h2>
+        <h2>ข้อควรพิจารณา:</h2>
         <ul>
             <li><strong>ขอบเขตการทำงาน (Scope):</strong> Script ที่รันใน Console จะทำงานใน context ของหน้าเว็บที่เปิดอยู่ ณ ขณะนั้นเท่านั้น และสามารถเข้าถึง DOM และตัวแปร JavaScript ทั้งหมดของหน้านั้นได้</li>
             <li><strong>ไม่ถาวร:</strong> Script ที่คุณรันใน Console จะหายไปเมื่อคุณโหลดหน้าเว็บใหม่ (refresh) หรือไปยังหน้าอื่น หากต้องการให้ Script ทำงานถาวร ควรใช้เป็น User Script ผ่าน Extension (เช่น Tampermonkey, Greasemonkey) หรือพัฒนาเป็น Browser Extension โดยตรง</li>
